--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!doctype html>
+<html lang="ja">
+  <metadata charset="utf-8">
+  <head>
+    <title>  
+      タイトル
+    </title>
+  </head> 
+  <body>
+    サンプル
+  </body>  
+</html>  
